--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "npx tsx src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "pnpm run dev"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
